# arena

./: AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  package-lock.json  package.json
.github/workflows/: ci.yml
assets/levels/duck_hunt_range/: README.md  level.toml
assets/levels/duck_range_01/: README.md  level.toml
assets/modules/duck_hunt/: manifest.json  module.toml
assets/modules/null_module/: module.toml
client/: Cargo.toml  level-storage.js
client/crates/engine/: Cargo.toml
client/crates/engine/src/: core.rs  flight.rs  lib.rs  motion.rs  net.rs  vehicle.rs
client/crates/engine/tests/: fixed_update.rs  hotload.rs  invalid_state.rs  lobby.rs  lobby_keyboard.rs  module_discovery_wasm.rs  module_errors.rs  motion.rs
client/crates/minigames/duck_hunt/: Cargo.toml
client/crates/minigames/duck_hunt/src/: lib.rs
client/crates/minigames/duck_hunt/tests/: hud.rs
client/crates/physics/: Cargo.toml
client/crates/physics/src/: lib.rs
client/crates/physics/tests/: no_stray_controller.rs
client/src/: config.rs  entitlements.rs  lib.rs  lobby.rs  main.rs  net.rs
client/tests/: entitlements.js  entitlements.rs  indexeddb_error.js  indexeddb_error.rs  signal_url.rs  storage.rs  ui_removed.rs
crates/analytics/: Cargo.toml  README.md
crates/analytics/src/: lib.rs
crates/bevy_webgl2/: Cargo.toml
crates/bevy_webgl2/src/: lib.rs
crates/editor/: Cargo.toml
crates/editor/src/: client.rs  level.rs  lib.rs  server.rs
crates/editor/tests/: server.rs
crates/engine/: Cargo.toml
crates/engine/src/: assets.rs  camera.rs  input.rs  lib.rs  locomotion.rs  ui.rs
crates/engine/tests/: basic.rs
crates/leaderboard/: Cargo.toml
crates/leaderboard/src/: db.rs  lib.rs  models.rs
crates/leaderboard/tests/: redis_url.rs
crates/minigames/duck_hunt/: Cargo.toml  server.rs
crates/minigames/duck_hunt/src/: lib.rs
crates/minigames/duck_hunt/tests/: spawn_and_score.rs
crates/minigames/null_module/: Cargo.toml
crates/minigames/null_module/src/: lib.rs
crates/net/: Cargo.toml
crates/net/src/: client.rs  lib.rs  message.rs  server.rs
crates/payments/: Cargo.toml
crates/payments/src/: lib.rs
crates/platform-api/: Cargo.toml
crates/platform-api/src/: lib.rs
crates/purchases/: Cargo.toml
crates/purchases/src/: lib.rs
crates/render/: Cargo.toml
crates/render/src/: lib.rs
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs
docs/: Analytics.md  Auth.md  Config.md  DuckHunt.md  Editor.md  Email.md  Leaderboards.md  Payments.md  Purchases.md  grafana-dashboard.json  modules.md  netcode.md  ops.md
server/: Cargo.toml
server/migration/: Cargo.toml
server/migration/src/: lib.rs  m0001_init.rs  m0002_add_analytics_event_id.rs  m0002_nodes.rs  m0003_create_leaderboard_tables.rs  m0003_mail_outbox.rs  m0004_email_otps.rs  m20240101_000001_create_users.rs  m20240101_000002_create_email_verifications.rs  m20240101_000003_create_email_otps.rs  m20240101_000004_create_user_totp.rs  m20240101_000005_create_recovery_codes.rs  m20240101_000006_create_sessions.rs  m20240101_000007_create_rate_limits.rs  m20240101_000008_create_leaderboard.rs  m20240101_000009_create_leaderboard_tables.rs  m20240101_000010_create_entitlements.rs  m20240101_000011_create_purchases.rs  m20240101_000012_create_analytics_events.rs  m20240101_000013_create_analytics_rollups.rs  m20240101_000014_create_players.rs
server/migration/tests/: migrations.rs
server/migrations/: 001_create_users.sql  002_create_email_verifications.sql  003_create_email_otps.sql  004_create_user_totp.sql  005_create_recovery_codes.sql  006_create_sessions.sql  007_create_rate_limits.sql  008_create_leaderboard.sql  009_create_leaderboard_tables.sql  20240101000000_init.sql
server/src/: auth.rs  config.rs  email.rs  entities.rs  jobs.rs  leaderboard.rs  lib.rs  main.rs  otp_store.rs  payments.rs  players.rs  room.rs  shard.rs  test_logger.rs  tests.rs
server/src/auth/: login.rs  mod.rs  register.rs
server/src/auth/twofa/: mod.rs
tests/: Cargo.toml  level-storage.test.js  netcode.rs  sw-cache.test.js
web/: bootstrap.js  index.html  manifest.json  modules.json  startup.js  sw.js
xtask/: Cargo.toml
xtask/src/: main.rs
