[workspace]
resolver = "2"
members = [
    "server",
    "server/migration",
    "client",
    "crates/net",
    "crates/platform-api",
    "crates/engine",
    "crates/editor",
    "xtask",
    "crates/minigames/duck_hunt",
    "crates/minigames/null_module",
    "crates/analytics",
    "crates/leaderboard",
    "crates/render",
    "crates/purchases",
    "crates/storage",
    "tests",
]
