[package]
name = "client"
version = "0.1.0"
edition = "2024"


[dependencies]
bevy = "0.12"
bevy_egui = "0.24"
reqwest = { version = "0.11", features = ["json", "cookies"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
engine = { path = "crates/engine" }
duck_hunt = { path = "crates/minigames/duck_hunt" }
wasm-bindgen-futures = "0.4"
