[package]
name = "client"
version = "0.1.0"
edition = "2024"


[dependencies]
bevy = { version = "0.12", default-features = false, features = [
    "animation",
    "bevy_asset",
    "bevy_gilrs",
    "bevy_scene",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_gltf",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "multi-threaded",
    "png",
    "hdr",
    "vorbis",
    "x11",
    "bevy_gizmos",
    "android_shared_stdcxx",
    "tonemapping_luts",
    "default_font",
] }
engine = { path = "crates/engine" }
duck_hunt = { path = "crates/minigames/duck_hunt" }
null_module = { path = "../crates/minigames/null_module" }
physics = { path = "crates/physics" }
editor = { path = "../crates/editor" }
render = { path = "../crates/render" }
analytics = { path = "../crates/analytics" }
payments = { path = "../crates/payments" }
platform-api = { path = "../crates/platform-api" }
netcode = { path = "../crates/net", package = "net" }
bevy_rapier3d = { version = "0.24", default-features = false, features = ["dim3"] }
reqwest = { version = "0.12", features = ["json", "blocking"], optional = true }


[features]
default = ["audio"]
audio = ["bevy/bevy_audio"]
webgl2 = ["render/webgl2"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
wee_alloc = { version = "0.4" }
wasm-bindgen = "0.2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { version = "0.12", features = ["json", "blocking"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"
