[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
lettre = { version = "0.11", features = ["builder", "smtp-transport"] }
once_cell = "1.18"
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.6", features = ["fs", "set-header"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "macros"] }
platform-api = { path = "../crates/platform-api" }
duck_hunt = { path = "../client/crates/minigames/duck_hunt" }
bevy = "0.12"
