[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
lettre = { version = "0.11", features = ["builder", "smtp-transport", "tokio1", "tokio1-native-tls"] }
once_cell = "1.18"
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.6", features = ["fs", "set-header"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
net = { path = "../crates/net", features = ["webrtc"] }
serde = { version = "1", features = ["derive"] }
webrtc = "0.11"
anyhow = "1"
log = "0.4"
env_logger = "0.11"
clap = { version = "4", features = ["derive", "env"] }
duck_hunt_server = { path = "../crates/minigames/duck_hunt" }
glam = "0.24"
postcard = { version = "1", features = ["alloc"] }
thiserror = "1"
email_address = "0.2"
prometheus = "0.13"
analytics = { path = "../crates/analytics" }
editor = { path = "../crates/editor" }
leaderboard = { path = "../crates/leaderboard" }
payments = { path = "../crates/payments" }
base64 = "0.21"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["serde", "v4"] }
serde_json = "1"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
sea-orm = { version = "0.12", features=["sqlx-postgres","runtime-tokio-rustls","macros"] }
storage = { path = "../crates/storage" }
sea-orm = { version = "0.12", features = ["sqlx-postgres", "runtime-tokio-rustls"] }
migration = { path = "migration" }

redis = { version = "0.24", optional = true, default-features = false, features = ["tokio-comp"] }

[features]
redis = ["dep:redis"]


[dev-dependencies]
tokio-tungstenite = "0.21"
futures-util = "0.3"
serial_test = "3"
tower = "0.5"
