[package]
name = "editor"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
platform-api = { path = "../platform-api" }
serde_json = "1"
bevy_ecs = { version = "0.12", default-features = false }
bevy_app = { version = "0.12", default-features = false }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

[dev-dependencies]
null_module = { path = "../minigames/null_module" }

