[package]
name = "leaderboard"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
scylla = { version = "0.11" }
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["serde", "v4"] }
tokio = { version = "1", features = ["fs", "sync", "macros", "rt-multi-thread"] }
