[package]
name = "payments"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1"
async-trait = "0.1"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
