[package]
name = "render"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.12", default-features = false, features = [
    "animation",
    "bevy_asset",
    "bevy_gilrs",
    "bevy_scene",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_gltf",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "multi-threaded",
    "png",
    "hdr",
    "vorbis",
    "x11",
    "bevy_gizmos",
    "android_shared_stdcxx",
    "tonemapping_luts",
    "default_font",
] }
bevy_webgl2 = { path = "../bevy_webgl2", optional = true }
uuid = { version = "1", default-features = false, features = ["js"] }

[features]
default = []
webgl2 = ["bevy/webgl2", "bevy_webgl2"]
