[package]
name = "engine"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.12", default-features = false, features = ["bevy_winit", "bevy_render", "bevy_core_pipeline", "bevy_pbr", "bevy_ui", "bevy_text", "x11"] }
platform-api = { path = "../../../crates/platform-api" }
bevy_rapier3d = { version = "0.24", default-features = false, features = ["dim3"] }
