[package]
name = "engine"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.12", default-features = false, features = ["bevy_render", "bevy_core_pipeline", "bevy_pbr", "bevy_text"] }
platform-api = { path = "../../../crates/platform-api" }
bevy_rapier3d = { version = "0.24", default-features = false, features = ["dim3"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
serde_json = "1.0"
futures-lite = "2.3"
thiserror = "1"
anyhow = "1"
log = "0.4"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
notify = "6"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
gloo-timers = { version = "0.2", features = ["futures"] }
web-sys = { version = "0.3", features = ["Window"] }

[features]
default = ["vehicle", "flight"]
vehicle = []
flight = []

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"

[dev-dependencies]
logtest = "2"
