[package]
name = "duck_hunt_server"
version = "0.1.0"
edition = "2024"

[lib]
path = "server.rs"

[dependencies]
glam = { version = "0.24", features = ["serde"] }
net = { path = "../../net" }
postcard = { version = "1", features = ["alloc"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["sync"] }
