[package]
name = "duck_hunt_server"
version = "0.1.0"
edition = "2024"

[dependencies]
glam = { version = "0.24", features = ["serde"] }
net = { path = "../../net" }
postcard = { version = "1", features = ["alloc"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["sync", "macros", "rt-multi-thread"] }
leaderboard = { path = "../../leaderboard" }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
bevy = { version = "0.12", default-features = false, features = [
    "bevy_render",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_text",
] }
platform-api = { path = "../../platform-api" }
anyhow = "1"
rand = "0.8"
analytics = { path = "../../analytics" }

[dev-dependencies]
tempfile = "3"
migration = { path = "../../../server/migration" }
