[package]
name = "duck_hunt"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.12"
platform-api = { path = "../../../../crates/platform-api" }
anyhow = "1"
postcard = { version = "1", features = ["alloc"] }
serde = { version = "1", features = ["derive"] }
net = { path = "../../../../crates/net" }
rand = "0.8"
