[package]
name = "duck_hunt"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.12", default-features = false, features = [
    "bevy_asset",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "multi-threaded",
    "png",
    "x11",
    "tonemapping_luts",
    "default_font",
] }
platform-api = { path = "../../../../crates/platform-api" }
anyhow = "1"
postcard = { version = "1", features = ["alloc"] }
serde = { version = "1", features = ["derive"] }
net = { path = "../../../../crates/net" }
rand = "0.8"
